[package]
name = "dse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
bevy_reflect = "0.11.0"
ux = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.30.0", features = ["serialize"] }
