[package]
name = "dse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
thiserror = "1"
bevy_reflect = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.30.0", features = ["serialize"] }
base64 = "0.21.2"
clap = { version = "4.3.19", features = ["derive"] }
glob = "0.3.1"
phf = { version = "0.11.2", features = ["macros"] }
midly = "0.5.3"
chrono = "0.4.26"
colored = "2"
soundfont = "0.0.2"
dse-dsp-sys = { git = "https://github.com/adakite1/dse-dsp-sys.git" }
